<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About"
    android:background="@drawable/bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="39dp">

        <TextView
            android:id="@+id/gameVersionView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/version"
            android:textSize="20dp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/aboutView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/about"
            android:textSize="40dp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/about_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_description"
                android:textSize="25dp"
                android:textColor="@color/white"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="15dp">

                <TextView
                    android:id="@+id/about_description_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_description_1"
                    android:textSize="25dp"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/about_description_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_description_2"
                    android:textSize="25dp"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="40dp"
                android:text="@string/support"
                android:textSize="30dp"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>