<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HighScoreActivity"
    android:background="@drawable/bg">


    <TextView
        android:id="@+id/highScoreTitleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leaderboard"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.172" />

    <LinearLayout
        android:id="@+id/highScoreMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <Button
            android:id="@+id/quickestTimeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="timeHighScore"
            android:text="@string/quickestTime"
            app:backgroundTint="@color/teal_200" />

        <Button
            android:id="@+id/fewestTurnsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="turnsHighScore"
            android:text="@string/fewestTurns"
            app:backgroundTint="@color/teal_200" />

        <Button
            android:id="@+id/longestSequenceButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sequenceHighScore"
            android:text="@string/longestSequence"
            app:backgroundTint="@color/teal_200" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>