<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListPuzzleFragment"
    android:background="@drawable/bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <GridLayout
                android:id="@+id/gridlayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="5"
                android:rowCount="4"
                tools:ignore="MissingConstraints">
            </GridLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/startOfDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_game_description"
                    android:textSize="20dp"
                    android:textColor="@color/white"/>

                    <TextView
                        android:id="@+id/listPuzzleTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textSize="20dp"
                        android:paddingLeft="4dp"
                        android:textColor="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">
                <TextView
                    android:id="@+id/endOfDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_game_description"
                    android:textSize="20dp"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/startMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp"
                tools:ignore="MissingConstraints">

                <Button
                    android:id="@+id/startButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/play"
                    app:backgroundTint="@color/teal_200" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>